# qserve

./: .gitignore  README.md  pyproject.toml  qserve_benchmark.py  qserve_benchmark_image.py  qserve_caption_rewrite.py  qserve_e2e_generation.py  qserve_vila_caption.py
data_prepare/: generate_cc_wds_meta.py
kernels/: setup.py
kernels/csrc/: activation.cpp  activation_kernels.cu  fused.cpp  fused_kernels.cu  layernorm.cpp  layernorm_kernels.cu  utils.cuh
kernels/csrc/fused_attention/: applyBiasRopeUpdateKVCache.h  cudaBf16Fallbacks.cuh  cudaFp8Utils.h  cudaTypeUtils.cuh  decoderMaskedMultiheadAttention.cu  decoderMaskedMultiheadAttention.h  decoderMaskedMultiheadAttentionTemplate.hpp  decoderMaskedMultiheadAttentionUtils.h  fused_attention.cpp  fused_attention.h  gptKernels.h  input_metadata_helper.cu  (+5 more)
qserve/: __init__.py  block.py  config.py  conversation.py  logger.py  prefix.py  sampling_params.py  sequence.py
qserve/core/: block_manager.py  policy.py  scheduler.py
qserve/engine/: arg_utils.py  llm_engine.py
qserve/utils/: __init__.py  constants.py  input_metadata.py  llava_image_processing.py  quant_config.py  tokenizer.py  utils.py  weight_utils.py
qserve/worker/: cache_engine.py  model_runner.py  worker.py
scripts/: benchmark_vlm.sh  img_e2e.sh  run_e2e.sh
scripts/benchmark/: benchmark_a100.sh  benchmark_l40s.sh
scripts/ckpt_converter/: checkpoint_converter.py  convert.sh  quant_utils.py
scripts/vlm_cap_scripts/: run_cap_synth-cc12m_vila13b_8gpus.sh  slurm_launch_cap_synth-cc12m_vila13b_8gpus.sh
unit_tests/: test_vllm_full_net_sampling.py
(+30 files in other folders)
